--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,52 @@
 ﻿<!DOCTYPE html>
-<html ng-app="spOrder">
+<html ng-app="wlmoniter">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Order Management</title>
-		<base href="/index.html">
+		<base href="/order.html">
 		<link type="text/css" href="javascripts/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<link type="text/css" href="javascripts/lib/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
 		<script type="text/javascript" src="javascripts/lib/jquery/jquery.min.js"></script>
-		<script type="text/javascript" src="javascripts/lib/bootstrap/js/bootstrap.min.js"></script>
 	</head>
 	<body>
+	<nav class="navbar navbar-default" ng-controller="NavController">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#the-menu">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand brand" href="#">Review System</a>
+			</div>
+			<div class="collapse navbar-collapse" id="the-menu">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#">{{user.last_name}} {{user.first_name}}</a></li>
+					<li><a href="" ng-click="logout()">LogOut</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+
 		<div class="container">
 			<br />
 			<div class="jumbotron text-center">
 				<h1>契約管理システム</h1>
 			</div>
 			<div ui-view></div>
-			<form method="post" action="/users/login">
-				<input type="text" name="username" />
-				<input type="text" name="password" />
-				<input type="submit" name="submit" value="login" />
-			</form>
-			<form method="post" action="/users/reset">
-				<input type="text" name="username" />
-				<input type="submit" name="submit" value="forgot" />
-			</form>
 		</div>
 		<script src="javascripts/lib/angular/angular.min.js"></script>
 		<script src="javascripts/lib/angular/angular-ui-router.min.js"></script>
+		<script src="javascripts/lib/angular/angular-cookies.min.js"></script>
 		<script src="javascripts/lib/angular/angular-resource.min.js"></script>
+		<script src="javascripts/angularapp.js"></script>
+		<script src="javascripts/modules/accounts/accountModule.js"></script>
+		<script src="javascripts/modules/accounts/js/services.js"></script>
+		<script src="javascripts/modules/accounts/js/controllers.js"></script>
+		<script src="javascripts/modules/orders/orderModule.js"></script>
+		<script src="javascripts/modules/orders/js/services.js"></script>
+		<script src="javascripts/modules/orders/js/controllers.js"></script>
 	</body>
 </html>
 
