--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 		<link type="text/css" href="javascripts/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<link type="text/css" href="javascripts/lib/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
 		<script type="text/javascript" src="javascripts/lib/jquery/jquery.min.js"></script>
+		<script type="text/javascript" src="javascripts/lib/bootstrap/js/bootstrap.min.js"></script>
 	</head>
 	<body>
 	<nav class="navbar navbar-default" ng-controller="NavController">
@@ -18,13 +19,21 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand brand" href="#">Review System</a>
+				<a class="navbar-brand brand" href="">Review System</a>
 			</div>
 			<div class="collapse navbar-collapse" id="the-menu">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#">{{user.last_name}} {{user.first_name}}</a></li>
-					<li><a href="" ng-click="logout()">LogOut</a></li>
-				</ul>
+				<div ng-if="user">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="">{{user.last_name}} {{user.first_name}}</a></li>
+						<li><a href="" ng-click="logout()">LogOut</a></li>
+					</ul>
+				</div>
+				<div ng-if="!user">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="" ng-click="transReg()">Register</a></li>
+						<li><a href="" ng-click="transLogin()">LogIn</a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</nav>
