--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
 		<script src="javascripts/lib/angular/angular-ui-router.min.js"></script>
 		<script src="javascripts/lib/angular/angular-cookies.min.js"></script>
 		<script src="javascripts/lib/angular/angular-resource.min.js"></script>
+		<script src="javascripts/lib/angular/ui-bootstrap-tpls.min.js"></script>
 		<script src="javascripts/angularapp.js"></script>
 		<script src="javascripts/modules/accounts/accountModule.js"></script>
 		<script src="javascripts/modules/accounts/js/services.js"></script>
