--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Order Management</title>
-		<base href="/order.html">
+		<base href="/index.html">
 		<link type="text/css" href="javascripts/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<link type="text/css" href="javascripts/lib/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
 		<script type="text/javascript" src="javascripts/lib/jquery/jquery.min.js"></script>
@@ -19,10 +19,17 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand brand" href="">Review System</a>
+				<a class="navbar-brand brand" href="" ng-click="transDefault()">Review System</a>
 			</div>
 			<div class="collapse navbar-collapse" id="the-menu">
-				<div ng-if="user">
+				<div ng-if="user && user.permission.indexOf('admin')>=0">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="">{{user.last_name}} {{user.first_name}}</a></li>
+						<li><a href="" ng-click="transAdmin()">Admin</a></li>
+						<li><a href="" ng-click="logout()">LogOut</a></li>
+					</ul>
+				</div>
+				<div ng-if="user && user.permission.indexOf('admin')<0">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="">{{user.last_name}} {{user.first_name}}</a></li>
 						<li><a href="" ng-click="logout()">LogOut</a></li>
