--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
 			</div>
 			<div ui-view></div>
 		</div>
+		<script src="javascripts/lib/socket.io-client/socket.io.js"></script>
 		<script src="javascripts/lib/angular/angular.min.js"></script>
 		<script src="javascripts/lib/angular/angular-ui-router.min.js"></script>
 		<script src="javascripts/lib/angular/angular-cookies.min.js"></script>
