--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
     <!-- your app's js -->
     <script src="lib/socket.io-client/socket.io.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/homes/homeModule.js"></script>
+    <script src="js/homes/js/controllers.js"></script>
     <script src="js/accounts/accountModule.js"></script>
     <script src="js/accounts/js/services.js"></script>
     <script src="js/accounts/js/controllers.js"></script>
