--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,9 @@
     <script src="js/accounts/js/controllers.js"></script>
     <script src="js/accounts/js/filters.js"></script>
     <script src="js/accounts/js/directives.js"></script>
+    <script src="js/projects/projectModule.js"></script>
+    <script src="js/projects/js/services.js"></script>
+    <script src="js/projects/js/controllers.js"></script>
   </head>
 
   <body ng-app="starter">
