--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,9 @@
     <script src="js/projects/projectModule.js"></script>
     <script src="js/projects/js/services.js"></script>
     <script src="js/projects/js/controllers.js"></script>
+    <script src="js/crms/crmModule.js"></script>
+    <script src="js/crms/js/services.js"></script>
+    <script src="js/crms/js/controllers.js"></script>
   </head>
 
   <body ng-app="starter">
