--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,9 @@
     <script src="js/crms/crmModule.js"></script>
     <script src="js/crms/js/services.js"></script>
     <script src="js/crms/js/controllers.js"></script>
+    <script src="js/finances/financeModule.js"></script>
+    <script src="js/finances/js/services.js"></script>
+    <script src="js/finances/js/controllers.js"></script>
     <script src="js/calendars/calendarModule.js"></script>
     <script src="js/calendars/js/directives.js"></script>
   </head>
