负荷管理模块

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,8 @@
     <script src="js/finances/js/controllers.js"></script>
     <script src="js/calendars/calendarModule.js"></script>
     <script src="js/calendars/js/directives.js"></script>
+    <script src="js/calendars/js/services.js"></script>
+    <script src="js/calendars/js/controllers.js"></script>
   </head>
 
   <body ng-app="starter">
